# ha-humidity-control

./: README.md  flake.nix  hacs.json  pyproject.toml
custom_components/humidity_control/: NOTICE  __init__.py  config_flow.py  const.py  humidifier.py  manifest.json  services.yaml  strings.json
custom_components/humidity_control/translations/: de.json  en.json
